--- a/people/people01.html
+++ b/people/people01.html
@@ -59,46 +59,51 @@
 
 <main class="l-main">
 
-  <div class="l-hero">
-    <h1 class="c-text--h1"><span>職員紹介</span>先輩の背中を追いかけて、<br>自分のなりたい姿を目指す</h1>
-    <h2>中島 菜々子<span> （1年目 松本営業部業務第1課）</span></h2>
-    <img src="../assets/img/people/main.png" alt="">
-    明朗快活で
-場を明るくする
-期待の新人職員
+  <section class="l-wrapper__outer l-wrapper">
+    <div>
+      <h1 class="c-text--h1 --peopel"><span>職員紹介</span>先輩の背中を追いかけて、<br>自分のなりたい姿を目指す</h1>
+      <h2 class="c-text--h2 --peopel">中島 菜々子<span> （1年目 松本営業部業務第1課）</span></h2>
+    </div>
+  </section>
+
+  <div class="l-hero--people">
+    <figure>
+      <img src="../assets/img/people/people01/main.png" alt="">
+      <figcaption>
+        明朗快活で<br>
+        場を明るくする<br>
+        期待の新人職員
+      </figcaption>
+    </figure>
   </div>
 
   <section class="l-wrapper__outer2 l-wrapper">
     <section class="l-wrapper--left">
-      <div class="l-wrapper--left--fixed">
-        <h1 class="c-text--h1"><span>職員紹介</span>先輩の背中を追いかけて、<br>自分のなりたい姿を目指す</h1>
-        <h2>中島 菜々子<span> （1年目 松本営業部業務第1課）</span></h2>
-      </div>
     </section>
-    <section class="l-wrapper__container l-wrapper--right p-people">
+    <section class="l-wrapper__container l-wrapper--right --peopel p-people">
 
       <div class="p-text-box">
-        <h2 class="c-text--h2"><span>現在の仕事</span>中小企業を、後方から支える</h2>
+        <h2 class="c-text--h2 --peopel2"><span>現在の仕事</span>中小企業を、後方から支える</h2>
         <p>現在は、保証稟議書の作成などを行う保証業務や、郵便物開封、公用車管理といった庶務を中心に行っています。先輩方と一緒に、お客様の経営支援に赴くこともあります。一年目なので、業務の基礎的なことを教わっている最中です。<br>
           協会の仕事は、中小企業のお客様を後方から支えることだと思っています。「公的な保証人」という、金融機関とは別の立場から企業支援ができることに、魅力を感じています。</p>
           <img src="../assets/img/people/people01/pic_01.png" alt="">
       </div>
 
       <div class="p-text-box">
-        <h2 class="c-text--h2"><span>協会の魅力</span>お客様にとってのメリットを、一番に考えて仕事ができる</h2>
+        <h2 class="c-text--h2 --peopel2"><span>協会の魅力</span>お客様にとってのメリットを、一番に考えて仕事ができる</h2>
         <p>協会の魅力は、お客様にとってのメリットを一番に考えられることです。経営支援などで関わった企業が実際に活躍されているのを見ると、やりがいを感じます。経営支援に赴くことは、今の楽しみのひとつです。<br>
           でも、自分がお客様を支えているというよりは、お客様に支えられていると感じることが多いですね。お話するなかで、自分が勉強させていただくこともたくさんあります。「一方的に支えている」というより、「支え合っている」という感覚に近いです。</p>
           <img src="../assets/img/people/people01/pic_02.png" alt="">
       </div>
 
       <div class="p-text-box">
-        <h2 class="c-text--h2"><span>今後の目標</span>尊敬する先輩のように、誰からも信頼される人になる</h2>
+        <h2 class="c-text--h2 --peopel2"><span>今後の目標</span>尊敬する先輩のように、誰からも信頼される人になる</h2>
         <p>金融機関の方にも中小企業の方にも信頼される、知識と人柄を身につけることです。目標としている先輩のようになれるよう、日々勉強中です。<br>
           先輩は、業務のなかでわからないことがあったり、失敗したりしてしまったときも、丁寧にフォローしてくれます。業務以外の相談にのっていただくこともあり、普段からよく様子を見て、気にかけてくれているのを感じます。一人ひとりがしっかりと責任を持ち、お互いに助け合う、先輩方の姿をとても尊敬しています。自分もそんな人になりたいです。</p>
       </div>
 
       <div class="p-text-box">
-        <h3 class="c-text--h3">ある1日のスケジュール</h3>
+        <h3 class="c-text--h3 --peopel">ある1日のスケジュール</h3>
         <div class="p-people--schedule">
           <dl>
             <div>
