--- a/about/index.html
+++ b/about/index.html
@@ -106,10 +106,79 @@
 
       <div class="p-text-box" id="anchor--03">
         <h2 class="c-text--h2">数字で見る長野県信用保証協会</h2>
-        <section>
-          <div>
-            <h2></h2>
-            <div></div>
+        <section class="p-about--numbers--outer">
+          <div class="p-about--numbers numbers01">
+            <div class="p-about--numbers--flex">
+              <div class="--center">
+                <h2>長野県内の<br>中小企業者のご利用率</h2>
+                <div class="number">50.3<span class="unit">%</span><span class="as_of">※2022年3月時点</span></div>
+              </div>
+              <figure><img src="../assets/img/about/numbers01.png" alt=""></figure>
+            </div>
+          </div>
+          <div class="p-about--numbers numbers02">
+            <div class="p-about--numbers--flex">
+              <div class="--numbers02">
+                <h2>保証債務残高</h2>
+                <div class="--left">
+                  <div class="number">78,941<span class="unit">件</span></div><br>
+                  <div class="number">7,481<span class="unit">億円</span><span class="as_of">※2022年3月時点</span></div>
+                </div>
+              </div>
+              <figure><img src="../assets/img/about/numbers02.png" alt=""></figure>
+            </div>
+          </div>
+          <div class="p-about--numbers numbers03">
+            <div class="p-about--numbers--flex">
+              <div class="--center">
+                <h2>職員数</h2>
+                <div class="number">138<span class="unit">名</span><span class="as_of">※2022年3月時点</span></div>
+              </div>
+              <figure><img src="../assets/img/about/numbers03.png" alt=""></figure>
+            </div>
+          </div>
+          <div class="p-about--numbers numbers04">
+            <div class="p-about--numbers--flex">
+              <div class="--center">
+                <h2>年間休日</h2>
+                <div class="number">120<span class="unit">日</span><span class="as_of">※2022年3月時点</span></div>
+              </div>
+              <figure><img src="../assets/img/about/numbers04.png" alt=""></figure>
+            </div>
+          </div>
+          <div class="p-about--numbers numbers05">
+            <div class="p-about--numbers--flex">
+              <h2>月平均残業時間</h2>
+              <div class="number">3.7<span class="unit">時間</span><span class="as_of">※2022年3月時点</span></div>
+              <figure><img src="../assets/img/about/numbers05.png" alt=""></figure>
+            </div>
+          </div>
+          <div class="p-about--numbers numbers06">
+            <div class="p-about--numbers--flex">
+              <div class="--center">
+                <h2>3年以内新卒離職率</h2>
+                <div class="number">0<span class="unit">%</span><span class="as_of">※2022年3月時点</span></div>
+              </div>
+              <figure><img src="../assets/img/about/numbers06.png" alt=""></figure>
+            </div>
+          </div>
+          <div class="p-about--numbers numbers07">
+            <div class="p-about--numbers--flex">
+              <div class="--center">
+                <h2>有給取得率</h2>
+                <div class="number">14.3<span class="unit">日</span><span class="as_of">※2022年3月時点</span></div>
+              </div>
+              <figure><img src="../assets/img/about/numbers07.png" alt=""></figure>
+            </div>
+          </div>
+          <div class="p-about--numbers numbers08">
+            <div class="p-about--numbers--flex">
+              <div class="--center">
+                <h2>育児休業復職率</h2>
+                <div class="number">100<span class="unit">%</span><span class="as_of">※2022年3月時点</span></div>
+              </div>
+              <figure><img src="../assets/img/about/numbers08.png" alt=""></figure>
+            </div>
           </div>
         </section>
       </div>
